I fixed the formatting of the podcast bio image/descritpion box, fixed the artist bio image/description box formatting, added a header to the artist page and created a static side navigation bar for ONLY the artist page. We decided an artist name can be no longer than 15 characters, the text begins to overflow the navigation section.

--- a/app/podcast.css
+++ b/app/podcast.css
@@ -1,4 +1,4 @@
-.profilePic{
+.podcastPic{
     border-radius:30%;
     border:3px solid silver;
     box-shadow:0 1px 0 black,
@@ -11,21 +11,24 @@
                0 1px 3px black,
                0 3px 5px black;
 }
-.profilePicContainer{
+.podcastProfilePicContainer{
     margin-left:2%;
     margin-top:3%;
     margin-bottom:2%;
     margin-right:2%;
     float:left;
 }
-#spacingTable{
-    width:50%;
+.podcastAlignmentTable{
+    width:95%;
+    border-top:10px solid darkred;
+    position:relative;
+    left:5%;
     background-color:darkred;
 }
-.spacingTableRow{
+.podcastColumnAlign{
     background-color:darkred;
 }
-#bioDescriptionTable{
+#podcastDescriptionTable{
     width:67%;
     border:3px solid silver;
     border-radius:10%;
@@ -75,7 +78,7 @@ th{
                0 1px 3px black,
                0 3px 5px black;
 }
-.podcastArtistName{
+.podcastName{
     padding-top:3%;
     color:darkred;
     text-align:left;
@@ -107,14 +110,6 @@ th{
     text-shadow:0 1px 0 black,
                0 2px 0 black,
                0 3px 0 black;
-}
-#spacingTableBelowBio{
-    width:100%;
-    height:2px;
-    background-color:darkred;
-}
-.spacingTableRowBelow{
-    background-color:darkred;
 }
 #podcastTableHeader{
     width:98%;
